C5b: parameter-bind remaining unsafe Cypher (GenericDAO, VersionDAO, ShepardFileDAO, StructuredDataDAO, *ReferenceDAO family, SemanticAnnotationDAO)
Second-wave Cypher injection fix. C5 (e90bfd8) handled the high-traffic
sites in Neo4jQueryBuilder, PermissionsDAO, and DataObjectDAO. C5b applies
the same `Map.of("paramName", longValue)` + `$paramName` parameter-binding
pattern to the additional `id()=` / `ID()=` concatenation sites surfaced
by the C5 exit-grep, reusing the `Neo4jQuery(cypher, params)` record from
C5 for sites whose return type was previously `String`.

These were structurally safe today (Java `long`s have no escape
characters) but become genuine injection bugs once L2c flips the
parameter type to `String appId`. C5b makes the L2c flip mechanical:
every site already binds via `$paramName`, so L2c only needs to swap the
key/value type, not redesign the query shape.

Per-file changes (file:method - before -> after):

- common/neo4j/daos/GenericDAO.java
  - getSearchForReachableReferencesByNeo4jIdQuery(rule, colSId, startSId, user)
    -> returns Neo4jQuery; "WHERE id(d) = " + startSId + " AND id(col) = " + colSId
       => "WHERE id(d) = $startId AND id(col) = $collectionId" + Map.of("startId",..., "collectionId",...)
  - getSearchForReachableReferencesQuery(collectionId, user)
    -> returns Neo4jQuery; "WHERE id(col) = " + collectionId
       => "WHERE id(col) = $collectionId" + Map.of("collectionId",...)
  - getSearchForReachableReferencesQuery(collectionId, startId, user)
    -> returns Neo4jQuery; "WHERE id(d) = " + startId + " AND id(col) = " + collectionId
       => "WHERE id(d) = $startId AND id(col) = $collectionId" + Map.of("startId",..., "collectionId",...)
  - getSearchForReachableReferencesByShepardIdQuery* (3 overloads): unchanged
    (concat shepardId, not id() — out of C5b scope, will be folded into
     L2c's appId rewrite)

- context/references/structureddata/daos/StructuredDataReferenceDAO.java
  - findByDataObjectNeo4jId(long dataObj